--- a/XamarinCommunityToolkitSample/Pages/Behaviors/AnimationBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/AnimationBehaviorPage.xaml
@@ -4,15 +4,15 @@
              x:Class="Xamarin.CommunityToolkit.Sample.Pages.Behaviors.AnimationBehaviorPage"
              xmlns:behaviors="clr-namespace:Xamarin.CommunityToolkit.Behaviors;assembly=Xamarin.CommunityToolkit"
              xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
-             xmlns:resources="clr-namespace:Xamarin.CommunityToolkit.Sample.Resx">
+             xmlns:rsx="clr-namespace:Xamarin.CommunityToolkit.Helpers;assembly=Xamarin.CommunityToolkit">
       <ScrollView>
         <StackLayout Padding="{StaticResource ContentPadding}"
                      Spacing="10">
 
-            <Label Text="{x:Static resources:AppResources.AnimationBehaviorTitle}"
+            <Label Text="{rsx:Translate AnimationBehaviorTitle}"
                    Padding="10,10,10,50"/>
 
-            <Button Text="{x:Static resources:AppResources.TestingFadeAnimation}"
+            <Button Text="{rsx:Translate TestingFadeAnimation}"
                    TextColor="HotPink">
                  <Button.Behaviors>
                       <behaviors:AnimationBehavior EventName="Clicked">
@@ -49,7 +49,7 @@
             </ImageButton>
             
  
-             <Label Text="{x:Static resources:AppResources.Shake}">
+             <Label Text="{rsx:Translate Shake}">
                 <Label.Behaviors>
                     <behaviors:AnimationBehavior Command="{Binding MyCommand}">
                         <behaviors:AnimationBehavior.AnimationType>
