--- a/XamarinCommunityToolkitSample/Pages/Behaviors/NumericValidationBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/NumericValidationBehaviorPage.xaml
@@ -4,7 +4,7 @@
                 xmlns:behaviors="clr-namespace:Xamarin.CommunityToolkit.Behaviors;assembly=Xamarin.CommunityToolkit"
                 x:Class="Xamarin.CommunityToolkit.Sample.Pages.Behaviors.NumericValidationBehaviorPage"
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
-                xmlns:resources="clr-namespace:Xamarin.CommunityToolkit.Sample.Resx">
+                xmlns:rsx="clr-namespace:Xamarin.CommunityToolkit.Helpers;assembly=Xamarin.CommunityToolkit">
 
     <pages:BasePage.Resources>
         <Style x:Key="InvalidEntryStyle" TargetType="Entry">
@@ -15,7 +15,7 @@
     <StackLayout Padding="{StaticResource ContentPadding}"
                  Spacing="50"
                  VerticalOptions="CenterAndExpand">
-        <Label Text="{x:Static resources:AppResources.NumericValidationBehaviorDescription}" />
+        <Label Text="{rsx:Translate NumericValidationBehaviorDescription}" />
         <Entry Placeholder="Number">
             <Entry.Behaviors>
                 <behaviors:NumericValidationBehavior InvalidStyle="{StaticResource InvalidEntryStyle}"
