--- a/XamarinCommunityToolkitSample/Pages/Views/MediaElementPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/MediaElementPage.xaml
@@ -1,17 +1,20 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
-<pages:BasePage
-    xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<pages:BasePage              
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://xamarin.com/schemas/2014/forms/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"     
     xmlns:views="clr-namespace:Xamarin.CommunityToolkit.UI.Views;assembly=Xamarin.CommunityToolkit"
+    mc:Ignorable="d"
     x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.MediaElementPage">
-    <Grid>
-        <views:MediaElement
-            Source="https://sec.ch9.ms/ch9/5d93/a1eab4bf-3288-4faf-81c4-294402a85d93/XamarinShow_mid.mp4"
-            ShowsPlaybackControls="True"
-            MediaOpened="OnMediaOpened"
-            MediaFailed="OnMediaFailed"
-            MediaEnded="OnMediaEnded"
-            SeekCompleted="OnSeekCompleted" />
-    </Grid>
+    <ContentPage.Content>
+        <Grid>
+            <views:MediaElement
+                Source="http://sec.ch9.ms/ch9/5d93/a1eab4bf-3288-4faf-81c4-294402a85d93/XamarinShow_mid.mp4"
+                MediaOpened="OnMediaOpened"
+                MediaEnded="OnMediaEnded"
+                MediaFailed="OnMediaFailed"/>
+        </Grid>
+    </ContentPage.Content>
 </pages:BasePage>
