--- a/XamarinCommunityToolkitSample/Pages/Behaviors/EventToCommandBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/EventToCommandBehaviorPage.xaml
@@ -5,7 +5,7 @@
                 xmlns:behaviors="clr-namespace:Xamarin.CommunityToolkit.Behaviors;assembly=Xamarin.CommunityToolkit"
                 x:Class="Xamarin.CommunityToolkit.Sample.Pages.Behaviors.EventToCommandBehaviorPage"
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
-                xmlns:rsx="clr-namespace:Xamarin.CommunityToolkit.Helpers;assembly=Xamarin.CommunityToolkit">
+                xmlns:rsx="clr-namespace:Xamarin.CommunityToolkit.Extensions;assembly=Xamarin.CommunityToolkit">
 
     <pages:BasePage.BindingContext>
         <vm:EventToCommandBehaviorViewModel />
