--- a/XamarinCommunityToolkitSample/Pages/Converters/ItemSelectedEventArgsPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Converters/ItemSelectedEventArgsPage.xaml
@@ -6,7 +6,7 @@
              xmlns:converters="clr-namespace:Xamarin.CommunityToolkit.Converters;assembly=Xamarin.CommunityToolkit"
              x:Class="Xamarin.CommunityToolkit.Sample.Pages.Converters.ItemSelectedEventArgsPage"
              xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
-             xmlns:rsx="clr-namespace:Xamarin.CommunityToolkit.Helpers;assembly=Xamarin.CommunityToolkit">
+             xmlns:rsx="clr-namespace:Xamarin.CommunityToolkit.Extensions;assembly=Xamarin.CommunityToolkit">
 
     <pages:BasePage.BindingContext>
         <vm:ItemSelectedEventArgsViewModel />
