--- a/XamarinCommunityToolkitSample/Pages/WelcomePage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/WelcomePage.xaml
@@ -5,7 +5,7 @@
     x:Class="Xamarin.CommunityToolkit.Sample.Pages.WelcomePage"
     xmlns:vm="clr-namespace:Xamarin.CommunityToolkit.Sample.ViewModels"
     xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
-    xmlns:rsx="clr-namespace:Xamarin.CommunityToolkit.Helpers;assembly=Xamarin.CommunityToolkit"
+    xmlns:rsx="clr-namespace:Xamarin.CommunityToolkit.Extensions;assembly=Xamarin.CommunityToolkit"
     xmlns:custom="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
     Title="{rsx:Translate WelcomeTitle}"
     NavigationPage.BackButtonTitle=""
