--- a/XamarinCommunityToolkitSample/Pages/Behaviors/ConfirmPasswordBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/ConfirmPasswordBehaviorPage.xaml
@@ -5,12 +5,16 @@
              xmlns:pages="clr-namespace:Microsoft.Toolkit.Xamarin.Forms.Sample.Pages;assembly=Microsoft.Toolkit.Xamarin.Forms.Sample"
              xmlns:behaviors="clr-namespace:Microsoft.Toolkit.Xamarin.Forms.Behaviors;assembly=Microsoft.Toolkit.Xamarin.Forms"
              xmlns:resources="clr-namespace:Microsoft.Toolkit.Xamarin.Forms.Sample.Resx"
+             xmlns:vm="clr-namespace:Microsoft.Toolkit.Xamarin.Forms.Sample.ViewModels.Behaviors;assembly=Microsoft.Toolkit.Xamarin.Forms.Sample"
              x:Class="Microsoft.Toolkit.Xamarin.Forms.Sample.Pages.Behaviors.ConfirmPasswordBehaviorPage">
     <pages:BasePage.Resources>
         <Style x:Key="InvalidEntryStyle" TargetType="Entry">
             <Setter Property="TextColor" Value="Red" />
         </Style>
     </pages:BasePage.Resources>
+    <pages:BasePage.BindingContext>
+        <vm:ConfirmPasswordBehaviorViewModel />
+    </pages:BasePage.BindingContext>
     <StackLayout Padding="{StaticResource ContentPadding}"
                  Spacing="50"
                  VerticalOptions="CenterAndExpand">
@@ -18,9 +22,10 @@
         <Entry x:Name="passwordEntry" Placeholder="{x:Static resources:AppResources.Password}" />
             <Entry Placeholder="{x:Static resources:AppResources.ConfirmPassword}">
                 <Entry.Behaviors>
-                    <behaviors:ConfirmPasswordBehavior InvalidStyle="{StaticResource InvalidEntryStyle}"
+                    <behaviors:ConfirmEqualInputsBehavior InvalidStyle="{StaticResource InvalidEntryStyle}"
                                                        Flags="ValidateOnValueChanging"
-                                                       OriginalPassword="{Binding Source={x:Reference passwordEntry},Path=Text}" />
+                                                       ValidCommand="{Binding SamePasswordCommand}"
+                                                       ComparedToString="{Binding Source={x:Reference passwordEntry},Path=Text}" />
                 </Entry.Behaviors>
             </Entry>
         </StackLayout>
