Added Multilingual Support (#216)
* Adding multilingual support

* Adding multilingual support

* Updating sample AppResource reference

* Make Xamarin CommunityToolkit linker safe (#210)

* Made the lib linker safe

* rebase against main

* Update XamarinCommunityToolkit/Helpers/TranslateExtension.shared.cs

Co-authored-by: Andrei <andrei.misiukevich@gmail.com>

* Update XamarinCommunityToolkit/Helpers/TranslateExtension.shared.cs

Co-authored-by: Pedro Jesus <pedrojesus.cefet@gmail.com>

* Updating the TranslationExtension file namespace

* Update .editorconfig (#212)

Tabs in https://github.com/xamarin/XamarinCommunityToolkit/pull/209 were rendering wider than 4 spaces

Co-authored-by: Gerald Versluis <gerald.versluis@microsoft.com>

* Added missing strings in AppResources.resx for UriValidationBehavior (#218)

* Edited Resx and it messed up the Designer

Added missing Resx strings for UriValidationDescription.

* Updated Resource Text to match Andrei's original

Co-authored-by: Andrei <andrei.misiukevich@gmail.com>
Co-authored-by: Gerald Versluis <gerald.versluis@microsoft.com>

* Multi binding sample (#219)

* Edited Resx and it messed up the Designer

Added missing Resx strings for UriValidationDescription.

* Created sample for MultiConverter

Added MultiConverterPage and MultiConverterPageViewModel
Added string resources in AppResources.resx
Added link to new page in ConvertersGalleryViewModel

* Updated Resource Text to match Andrei's original

* UI Neatening

Adding some spacing and padding and line breaks to look after Gerald's eyes.

* Update XamarinCommunityToolkitSample/ViewModels/Converters/MultiConverterViewModel.cs

* Update XamarinCommunityToolkitSample/Pages/Converters/MultiConverterPage.xaml.cs

Co-authored-by: Gerald Versluis <gerald.versluis@microsoft.com>
Co-authored-by: Andrei <andrei.misiukevich@gmail.com>

* Automated dotnet-format update (#221)

Co-authored-by: github-action

--- a/XamarinCommunityToolkitSample/Pages/Behaviors/EventToCommandBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/EventToCommandBehaviorPage.xaml
@@ -5,7 +5,7 @@
                 xmlns:behaviors="clr-namespace:Xamarin.CommunityToolkit.Behaviors;assembly=Xamarin.CommunityToolkit"
                 x:Class="Xamarin.CommunityToolkit.Sample.Pages.Behaviors.EventToCommandBehaviorPage"
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
-                xmlns:resources="clr-namespace:Xamarin.CommunityToolkit.Sample.Resx">
+                xmlns:rsx="clr-namespace:Xamarin.CommunityToolkit.Extensions;assembly=Xamarin.CommunityToolkit">
 
     <pages:BasePage.BindingContext>
         <vm:EventToCommandBehaviorViewModel />
@@ -14,9 +14,9 @@
     <ContentView Padding="{StaticResource ContentPadding}">
         <StackLayout VerticalOptions="CenterAndExpand"
                      Spacing="20">
-            <Label Text="{x:Static resources:AppResources.EventToCommandBehaviorDescription}" />
+            <Label Text="{rsx:Translate EventToCommandBehaviorDescription}" />
             <Label Text="{Binding ClickCount, StringFormat='{0} clicks'}" />
-            <Button Text="{x:Static resources:AppResources.ClickMe}"
+            <Button Text="{rsx:Translate ClickMe}"
                     TextColor="White"
                     BackgroundColor="{StaticResource NormalButtonBackgroundColor}">
                 <Button.Behaviors>
