--- a/XamarinCommunityToolkitSample/Pages/Views/SideMenuViewPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/SideMenuViewPage.xaml
@@ -4,7 +4,7 @@
              xmlns:views="clr-namespace:Xamarin.CommunityToolkit.UI.Views;assembly=Xamarin.CommunityToolkit"
              xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
              x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.SideMenuViewPage"
-             xmlns:resources="clr-namespace:Xamarin.CommunityToolkit.Sample.Resx">
+             xmlns:rsx="clr-namespace:Xamarin.CommunityToolkit.Extensions;assembly=Xamarin.CommunityToolkit">
 
     <pages:BasePage.Resources>
     </pages:BasePage.Resources>
