--- a/XamarinCommunityToolkitSample/Pages/Views/CameraViewPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/CameraViewPage.xaml
@@ -3,23 +3,41 @@
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                 xmlns:views="clr-namespace:Xamarin.CommunityToolkit.UI.Views;assembly=Xamarin.CommunityToolkit"
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
+                xmlns:rsx="clr-namespace:Xamarin.CommunityToolkit.Extensions;assembly=Xamarin.CommunityToolkit"
                 x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.CameraViewPage">
     <StackLayout>
-        <Grid RowDefinitions="300, 20, 20">
-            <views:CameraView OnAvailable="CameraView_OnAvailable" x:Name="cameraView" CaptureOptions="Video" CameraOptions="Front" MediaCaptured="CameraView_MediaCaptured" />
-            <Slider Grid.Row="1" Maximum="10" Minimum="1" Value="1" x:Name="zoomSlider" Margin="20,0" ValueChanged="ZoomSlider_ValueChanged" />
-            <Label Grid.Row="2" x:Name="zoomLabel" Text="Zoom: 1" />
-            
+        <Grid RowDefinitions="300, 20">
+            <views:CameraView OnAvailable="CameraView_OnAvailable" x:Name="cameraView" CaptureOptions="Video"
+                              MediaCaptured="CameraView_MediaCaptured" SavePhotoToFile="True" FlashMode="On" />
+
+            <StackLayout Orientation="Horizontal" Grid.Row="1">
+                <Label x:Name="zoomLabel" />
+                <Slider Maximum="10" Minimum="1" Value="1" x:Name="zoomSlider" Margin="5,0" ValueChanged="ZoomSlider_ValueChanged" IsEnabled="False" />
+            </StackLayout>
         </Grid>
         <ScrollView>
             <StackLayout>
-                <StackLayout Orientation="Horizontal">
-                    <Switch IsToggled="True" Toggled="Switch_Toggled" />
-                    <Label Text="Video"/>
-                </StackLayout>                
-                <Button x:Name="doCameraThings" Text="Start recording" Clicked="DoCameraThings_Clicked" />
-                <Image x:Name="previewPicture" WidthRequest="150" HeightRequest="150" />
-                <MediaElement x:Name="previewMovie" WidthRequest="150" HeightRequest="150" />
+                <Grid ColumnDefinitions="*, *" RowDefinitions="*,*">
+                    <StackLayout Grid.Column="0" Grid.Row="0" Orientation="Horizontal" Margin="5">
+                        <Switch IsToggled="True" Toggled="VideoSwitch_Toggled" Margin="0,0,5,0" />
+                        <Label Text="Video"/>
+                    </StackLayout>
+                    <StackLayout Grid.Column="0" Grid.Row="1" Orientation="Horizontal" Margin="5">
+                        <Switch IsToggled="False" Toggled="FrontCameraSwitch_Toggled" Margin="0,0,5,0" />
+                        <Label Text="Front camera"/>
+                    </StackLayout>
+                    <StackLayout Grid.Column="1" Grid.Row="0" Orientation="Horizontal" Margin="5">
+                        <Switch IsToggled="True" Toggled="FlashSwitch_Toggled" Margin="0,0,5,0" />
+                        <Label Text="Flash"/>
+                    </StackLayout>
+                    <StackLayout Grid.Column="1" Grid.Row="1" Orientation="Horizontal" Margin="5">
+                        <Switch IsToggled="False" Toggled="KeepScreenOnSwitch_Toggled" Margin="0,0,5,0" />
+                        <Label Text="Keep screen on"/>
+                    </StackLayout>
+                </Grid>
+
+                <Button x:Name="doCameraThings" Text="{rsx:Translate CameraViewSampleStartRecording}" Clicked="DoCameraThings_Clicked" IsEnabled="False" />
+                <Image x:Name="previewPicture" HeightRequest="250" BackgroundColor="LightGray" Aspect="AspectFill" IsVisible="False"  />
             </StackLayout>
         </ScrollView>
     </StackLayout>
