Add UWP camera view renderer
Fix UWP building in Toolkit


Fix UWP Renderer except missing methods


fix missing methods


fix targets


add UWP capabilities


rebase fixes


bump UWP sample app XF version


Remove unneeded var


remove internals


Fix stream issue

--- a/XamarinCommunityToolkitSample/Pages/Views/CameraViewPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/CameraViewPage.xaml
@@ -37,7 +37,7 @@
                 </Grid>
 
                 <Button x:Name="doCameraThings" Text="{rsx:Translate CameraViewSampleStartRecording}" Clicked="DoCameraThings_Clicked" IsEnabled="False" />
-                <Image x:Name="previewPicture" HeightRequest="250" BackgroundColor="LightGray" Aspect="AspectFill" IsVisible="False"  />
+                <Image x:Name="previewPicture" HeightRequest="250" BackgroundColor="LightGray" Aspect="AspectFit" IsVisible="False"  />
             </StackLayout>
         </ScrollView>
     </StackLayout>
