--- a/XamarinCommunityToolkitSample/Pages/Behaviors/UserStoppedTypingBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/UserStoppedTypingBehaviorPage.xaml
@@ -3,6 +3,8 @@
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                 xmlns:vm="clr-namespace:Xamarin.CommunityToolkit.Sample.ViewModels.Behaviors"
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
+                xmlns:resources="clr-namespace:Xamarin.CommunityToolkit.Sample.Resx"
+                xmlns:behaviors="clr-namespace:Xamarin.CommunityToolkit.Behaviors;assembly=Xamarin.CommunityToolkit"
                 x:Class="Xamarin.CommunityToolkit.Sample.Pages.Behaviors.UserStoppedTypingBehaviorPage">
 
     <pages:BasePage.BindingContext>
@@ -10,8 +12,30 @@
     </pages:BasePage.BindingContext>
 
     <pages:BasePage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!" />
+        <StackLayout Spacing="20">
+
+            <Label Text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed rhoncus vitae neque vulputate imperdiet. Duis eu congue dolor. Etiam at sem in purus placerat sollicitudin sagittis et diam. Donec ultrices ipsum sit." Margin="{StaticResource ContentPadding}" />
+
+            <Frame Margin="{StaticResource ContentPadding}" CornerRadius="10">
+                <Grid ColumnDefinitions="2*, *">
+                    <Label Text="User stopped typing threshold" VerticalTextAlignment="Center" />
+                    <Entry x:Name="TypingThresholdSetting" Text="1000" Keyboard="Numeric" Grid.Column="1" />
+
+                    <Label Text="Auto dismiss keyboard" VerticalTextAlignment="Center" Grid.Row="1" />
+                    <Switch x:Name="AutoDismissKeyboardSetting" HorizontalOptions="End" Grid.Row="1" Grid.Column="1" />
+                </Grid>
+            </Frame>
+
+            <SearchBar Placeholder="Start searching..." Margin="{StaticResource ContentPadding}">
+                <SearchBar.Behaviors>
+                    <behaviors:UserStoppedTypingBehavior Command="{Binding SearchCommand}"
+                                                         StoppedTypingThreshold="{Binding Path=Text, Source={x:Reference TypingThresholdSetting}}"
+                                                         AutoDismissKeyboard="{Binding Path=IsToggled, Source={x:Reference AutoDismissKeyboardSetting}}" />
+                </SearchBar.Behaviors>
+            </SearchBar>
+
+            <Label Text="{Binding PerformedSearches}" Margin="{StaticResource ContentPadding}" />
+            
         </StackLayout>
     </pages:BasePage.Content>
 </pages:BasePage>
