--- a/XamarinCommunityToolkitSample/Pages/Views/CameraViewPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/CameraViewPage.xaml
@@ -30,14 +30,10 @@
                         <Switch IsToggled="True" Toggled="FlashSwitch_Toggled" Margin="0,0,5,0" />
                         <Label Text="Flash"/>
                     </StackLayout>
-                    <StackLayout Grid.Column="1" Grid.Row="1" Orientation="Horizontal" Margin="5">
-                        <Switch IsToggled="False" Toggled="KeepScreenOnSwitch_Toggled" Margin="0,0,5,0" />
-                        <Label Text="Keep screen on"/>
-                    </StackLayout>
                 </Grid>
 
                 <Button x:Name="doCameraThings" Text="{rsx:Translate CameraViewSampleStartRecording}" Clicked="DoCameraThings_Clicked" IsEnabled="False" />
-                <Image x:Name="previewPicture" HeightRequest="250" BackgroundColor="LightGray" Aspect="AspectFill" IsVisible="False"  />
+                <Image x:Name="previewPicture" HeightRequest="250" BackgroundColor="LightGray" Aspect="AspectFit" IsVisible="False"  />
             </StackLayout>
         </ScrollView>
     </StackLayout>
